--- a/front-pdjs/src/assets/pdfjs/web/viewer.html
+++ b/front-pdjs/src/assets/pdfjs/web/viewer.html
@@ -41,7 +41,7 @@ See https://github.com/adobe-type-tools/cmap-resources
     />
     <script src="../build/pdf.js"></script>
 
-    <script src="viewer.js"></script>
+    <script  src="viewer.js"></script>
   </head>
 
   <body tabindex="1" class="loadingInProgress">
@@ -170,6 +170,36 @@ See https://github.com/adobe-type-tools/cmap-resources
           </div>
         </div>
         <!-- findbar -->
+       <!-- @bertrand -->
+          <div class="editorParamsToolbar hidden doorHangerRight" id="editorFreeTextParamsToolbar">
+          <div class="editorParamsToolbarContainer">
+            <div class="editorParamsSetter">
+              <label for="editorFreeTextColor" class="editorParamsLabel" data-l10n-id="editor_free_text_color">Color</label>
+              <input type="color" id="editorFreeTextColor" class="editorParamsColor" tabindex="100">
+            </div>
+            <div class="editorParamsSetter">
+              <label for="editorFreeTextFontSize" class="editorParamsLabel" data-l10n-id="editor_free_text_size">Size</label>
+              <input type="range" id="editorFreeTextFontSize" class="editorParamsSlider" value="10" min="5" max="100" step="1" tabindex="101">
+            </div>
+          </div>
+        </div>
+
+        <div class="editorParamsToolbar hidden doorHangerRight" id="editorInkParamsToolbar">
+          <div class="editorParamsToolbarContainer">
+            <div class="editorParamsSetter">
+              <label for="editorInkColor" class="editorParamsLabel" data-l10n-id="editor_ink_color">Color</label>
+              <input type="color" id="editorInkColor" class="editorParamsColor" tabindex="102">
+            </div>
+            <div class="editorParamsSetter">
+              <label for="editorInkThickness" class="editorParamsLabel" data-l10n-id="editor_ink_thickness">Thickness</label>
+              <input type="range" id="editorInkThickness" class="editorParamsSlider" value="1" min="1" max="20" step="1" tabindex="103">
+            </div>
+            <div class="editorParamsSetter">
+              <label for="editorInkOpacity" class="editorParamsLabel" data-l10n-id="editor_ink_opacity">Opacity</label>
+              <input type="range" id="editorInkOpacity" class="editorParamsSlider" value="100" min="1" max="100" step="1" tabindex="104">
+            </div>
+          </div>
+        </div>
 
         <div
           id="secondaryToolbar"
@@ -488,6 +518,17 @@ See https://github.com/adobe-type-tools/cmap-resources
                 >
                   <span data-l10n-id="bookmark_label">Current View</span>
                 </a>
+                <!-- @bertrand -->
+                 <div class="verticalToolbarSeparator hiddenMediumView"></div>
+
+                <div id="editorModeButtons" class="splitToolbarButton toggled" role="radiogroup">
+                  <button id="editorFreeText" class="toolbarButton" disabled="disabled" title="Text" role="radio" aria-checked="false" tabindex="34" data-l10n-id="editor_free_text2">
+                    <span data-l10n-id="editor_free_text2_label">Text</span>
+                  </button>
+                  <button id="editorInk" class="toolbarButton" disabled="disabled" title="Draw" role="radio" aria-checked="false" tabindex="35" data-l10n-id="editor_ink2">
+                    <span data-l10n-id="editor_ink2_label">Draw</span>
+                  </button>
+                </div>
 
                 <div class="verticalToolbarSeparator hiddenSmallView"></div>
 
@@ -522,13 +563,14 @@ See https://github.com/adobe-type-tools/cmap-resources
                   >
                     <span data-l10n-id="zoom_in_label">Zoom In</span>
                   </button>
+                  <!-- @bertrand -->
                   <button
                     id="sign"
                     class="toolbarButton sign"
                     title="Sign"
                     tabindex="22"
                     data-l10n-id="sign"
-                  >
+                  > Sign
                     <span data-l10n-id="sign_label">Sign</span>
                   </button>
                 </div>
