--- a/makeViewer/fabric/fabric.html
+++ b/makeViewer/fabric/fabric.html
@@ -5,16 +5,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.7.22/fabric.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.3.0/fabric.min.js"></script>
         <link rel="stylesheet" href="style.css">
-        <script src="fabric.min.js"></script>
     </head>
     <body>
         <canvas id="the-canvas">
-        
         </canvas>
+        <button id="add-line-btn"> Add Line</button>
+        
       <script src="script.js"></script>
     </body>
 </html>
